[package]
name = "swc-transform-css-modules"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true

# Optimize for size
opt-level = "s"

# Strip debug symbols
strip = "symbols"

[dependencies]
swc_core = { version = "0.76", features = ["ecma_plugin_transform", "ecma_parser"] }

[dev-dependencies]
testing = "0.33"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
